overflow not working

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         background-color: #848587;
         margin-left: 2.5px;
         margin-top: 10px;
+        z-index: 0;
         position: absolute;
-
     }
 
     .active,
@@ -157,9 +157,9 @@
                         class="material-icons">chevron_right</i></button></div>
         </div>
 
-        <div class="container" id="timeline">
+        <div class="container" id="timeline" style="height: 630px; overflow: hidden;">
             <div class="card-one abc">
-                <div class="content-timeline-header">
+                <div class=" content-timeline-header">
                     <div class="Ari-Logo">
                         <img src="ARILOGO.png" alt="Image Description" style="height: 40px; width: 44px;">
                     </div>
